Updated compare and index

--- a/UnixFinalProject/compare.html
+++ b/UnixFinalProject/compare.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" href="compare.css">
 <body>
  <div class="topnav">
-  <a href="home.html">Home</a>
+  <a href="index.html">Home</a>
   <a href="news.html">News</a>
   <a href="reviews.html">Reviews</a>
   <a class="active" href="#compare">Compare</a>
@@ -25,11 +25,64 @@
 <img class= "logoright" src="joystick.png" height="300px" width="500px">
 <center>
 		<div class="window">
-			<h1>Welcome to Joystix!</h1>
-			<p>Joystix is a website that provides its users with information about Playstation consoles. Wondering which console to purchase? 
-			Looking for the latest Playstation game reviews? If that's the case, you have come to the right place! This website offers all 
-			the content you want in one place. Joystix's goal is to offer gamers from around the world the opportunity to share their love 
-			for video games and help others learn more about the popular platform.</p>
+			<h1>Specifications</h1>
+			<table>
+  <tr>
+    <th></th>
+    <th>Playstation 4</th>
+    <th>Playstation 5</th>
+  </tr>
+  <tr>
+    <td>CPU</td>
+    <td>1.6GHz 8-Core AMD Jaguar</td>
+    <td>8x Zen 2 Cores at 3.5GHz (Variable Frequency)</td>
+  </tr>
+  <tr>
+    <td>GPU</td>
+    <td>1.84 TFLOPs, 18 CUs at 800MHz</td>
+    <td>10.28 TFLOPs, 36 CUs at 2.23GHz</td>
+  </tr>
+  <tr>
+    <td>GPU Architecture</td>
+    <td>AMD Radeon</td>
+    <td>Custom RDNA 2</td>
+  </tr>
+  <tr>
+    <td>Memory</td>
+    <td>8GB GDDR5</td>
+    <td>16GB GDDR6</td>
+  </tr>
+  <tr>
+    <td>Memory Bandwidth</td>
+    <td>176GB/s</td>
+    <td>448GB/s</td>
+  </tr>
+  <tr>
+    <td>Internal Storage</td>
+    <td>500GB HDD</td>
+    <td>Custom 825GB SSD</td>
+  </tr>
+  <tr>
+    <td>I/O Throuput</td>
+    <td>~50-100MB/s</td>
+    <td>5.5GB/s (Raw), Typical 8-9GB/s (Compressed)</td>
+  </tr>
+  <tr>
+    <td>Expandable Storage</td>
+    <td>Internal HDD Slot</td>
+    <td>NVMe SSD Slot</td>
+  </tr>
+  <tr>
+    <td>External Storage</td>
+    <td>USB HDD Support</td>
+    <td>USB HDD Support</td>
+  </tr>
+  <tr>
+    <td>Optical Drive</td>
+    <td>Blu-ray Drive</td>
+    <td>4K UHD Blu-ray Drive</td>
+  </tr>
+</table>
 		</div>
 	</center>
 </body>
