Updated compare, index and news

--- a/UnixFinalProject/news.html
+++ b/UnixFinalProject/news.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" href="news.css">
 <body>
  <div class="topnav">
-  <a href="home.html">Home</a>
+  <a href="index.html">Home</a>
   <a class="active" href="#news">News</a>
   <a href="reviews.html">Reviews</a>
   <a href="compare.html">Compare</a>
