Updated play and reviews

--- a/UnixFinalProject/reviews.html
+++ b/UnixFinalProject/reviews.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" href="reviews.css">
 <body>
  <div class="topnav">
-  <a href="home.html">Home</a>
+  <a href="index.html">Home</a>
   <a href="news.html">News</a>
   <a class="active" href="#reviews">Reviews</a>
   <a href="compare.html">Compare</a>
