--- a/UnixFinalProject/play.html
+++ b/UnixFinalProject/play.html
@@ -7,7 +7,7 @@
 <script type="text/javascript" src="play.js"></script>
 <body>
  <div class="topnav">
-  <a href="home.html">Home</a>
+  <a href="index.html">Home</a>
   <a href="news.html">News</a>
   <a href="reviews.html">Reviews</a>
   <a href="compare.html">Compare</a>
